# template

./: .env  .gitignore  .justfile  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  README_docker.md  conandata.yml  conanfile.py  graph.html
.github/: constants.env
.github/template/: README.md  template_name  template_repository
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  linux-ci.yml  macos-ci.yml  template-janitor.yml  windows-ci.yml
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/c_cpp_template/: sample_library.hpp
include/myproject/: sample_library.hpp
scripts/setup/: .env  justfile
src/: CMakeLists.txt
src/json_parser/: CMakeLists.txt  json_parser.cpp  main.cc
src/opencv_test/: CMakeLists.txt
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
